--- a/scss/4.services/services.scss
+++ b/scss/4.services/services.scss
@@ -32,6 +32,7 @@
         list-style: none;
 
         & .accordion__item{
+            position: relative;
             width: 50%;
             margin-bottom: 15px;
             -webkit-box-shadow: 0px 3px 8px 2px rgba(34, 60, 80, 0.2);
@@ -81,11 +82,40 @@
             }
 
             & .show{
-                display: block;
+                animation: showBlock 0.5s ease forwards;
+            }
+
+            @keyframes showBlock {
+                from{
+                    height: 0;
+                }to{
+                    height: 184px;
+                }
             }
 
             & .hide{
-                display: none;
+                animation: showBlockIn 0.5s ease forwards ;
+            }
+            @keyframes showBlockIn {
+                from{
+                    height: 184px;
+                }to{
+                    height: 0;
+                }
+            }
+            & .showContent{
+                animation: showContent ease 2s forwards;
+            }
+            @keyframes showContent {
+                from{
+                    opacity: 0;
+                }to{
+                    opacity: 1;
+                }
+            }
+
+            & .hideContent{
+                opacity: 0;
             }
         }
 
