--- a/scss/5.aboutUs/about-us.scss
+++ b/scss/5.aboutUs/about-us.scss
@@ -55,7 +55,7 @@
             font-family: 'RalewayBold';
             width: 159px;
             height: 55px;
-            margin-top: 80px;
+            margin-top: 60px;
             text-transform: uppercase;
             border-radius: 5px;
             text-decoration: none;
@@ -68,71 +68,127 @@
                 @include button_in_section(#fff, #061e37, 1px solid #061e37); 
             }
         }
+
+        & .pulse{
+            animation: pulse 3s infinite linear;
+            transition: transform 0.5s;
+        }
+        @keyframes pulse {
+            from{
+                transform: translateY(0px)
+            }50%{
+                transform: translateY(20px)
+            }to{
+                transform: translateY(0px)
+            }
+        }
+
+
     }
-
-    & .sliderUpDown_block{
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction:column;
-        align-items: center;
-
-        & .arrow_up{
-            width: 25px;
-            height: 15px;
-            margin: 40px 0 1px 100px;
-        }
-
-        & .arrow_down{
-            width: 25px;
-            height: 15px;
-            margin: 1px 0 40px 100px;
-        }
-
-        & .slider_menu{
+    & .sliderUpDown{
+        width: 760px;
+        height: 565px;
+        & .sliderUpDown_block{
+            width: 100%;
             height: 100%;
             display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            align-items:center;
-            list-style-type: none;
+            flex-direction:column;
+            align-items: center;
 
-            & .slider_item{
-                display: none;
-
-                & .slider_avatar{
-                    margin-right: 50px;
-                    object-fit: contain;
-                }
-
-                & figcaption{
-                    width: 750px;
-                    height: 160px;
-                    background: #fff;
-                    border-radius: 10px;
-                    -webkit-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
-                    -moz-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
-                    box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
-
-                    & h3{
-                        @include font('RalewayBold', 0, #000);
-                        @include adaptiv-fon(18, 14);
-                        margin: 30px 0 0 30px;
-                    }
-
-                    & p{
-                        width: 650px;
-                        @include font('Raleway', 0, #b4c0c7);
-                        @include adaptiv-fon(14, 14);
-                        font-style: italic;
-                        margin: 15px 0 0 30px;
-                        line-height:25px
-                    }
-                }
+            & .arrow_up{
+                width: 25px;
+                height: 15px;
+                margin: 40px 0 1px 100px;
             }
-            & .slider_item.active{
-                display: flex;
+
+            & .arrow_down{
+                width: 25px;
+                height: 15px;
+                margin: 1px 0 40px 100px;
+            }
+            & .conteiner{
+                position: relative;
+                width: 100%;
+                height: 100%;
+
+                & .slider_menu{
+                    position: absolute;
+                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    align-items:center;
+                    list-style-type: none;
+
+                    & .slider_item{
+                        display: none;
+
+                        & .slider_avatar{
+                            margin-right: 50px;
+                            object-fit: contain;
+                        }
+
+                        & figcaption{
+                            width: 750px;
+                            height: 160px;
+                            background: #fff;
+                            border-radius: 10px;
+                            -webkit-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
+                            -moz-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
+                            box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
+
+                            & h3{
+                                @include font('RalewayBold', 0, #000);
+                                @include adaptiv-fon(18, 14);
+                                margin: 30px 0 0 30px;
+                            }
+
+                            & p{
+                                width: 650px;
+                                @include font('Raleway', 0, #b4c0c7);
+                                @include adaptiv-fon(14, 14);
+                                font-style: italic;
+                                margin: 15px 0 0 30px;
+                                line-height:25px
+                            }
+                        }
+                    }
+                    & .slider_item.active{
+                        display: flex;
+                    }
+                }
+                & .animated_slide_up{
+                    animation-name: slide_up;
+                    animation-duration: 1s;
+                    animation-timing-function: ease;
+                }
+                @keyframes slide_up {
+                    from {
+                        margin-top: 100px;
+                        opacity: 0;
+                    }
+                    to {
+                        margin-top: 0;
+                        opacity: 1;
+                    }
+                }
+                & .animated_slide_down{
+                    animation-name: slide_down;
+                    animation-duration: 1s;
+                    animation-timing-function: ease;
+                }
+                @keyframes slide_down {
+                    from {
+                        margin-top: -100px;
+                        opacity: 0;
+                    }
+                    to {
+                        margin-top: 0;
+                        opacity: 1;
+                    }
+                }
             }
         }
     }
-}
+}   
+
