--- a/scss/6.OurTeam/ourTeam.scss
+++ b/scss/6.OurTeam/ourTeam.scss
@@ -50,7 +50,7 @@
                 -webkit-box-shadow: 0px 0px 15px 2px rgba(34, 60, 80, 0.2);
                 -moz-box-shadow: 0px 0px 15px 2px rgba(34, 60, 80, 0.2);
                 box-shadow: 0px 0px 15px 2px rgba(34, 60, 80, 0.2);
-
+            
                 & .boxShadowInset{
                     background: none;
                     border-radius: 50%;
@@ -69,20 +69,77 @@
                     }
                 }
             }
+            & .fadeIn{
+                animation: fadeStart 1 ease 1s forwards;
+                transition: transform 1s;
+            }
+
+            @keyframes fadeStart {
+                from{
+                    opacity: 0;
+                    transform: translateY(-50px);
+                }to{
+                    opacity: 1;
+                    transform: translateY(0);
+                }
+            }
+
+            & .fadeOut{
+                animation: fadeEnd 1 ease 1s forwards;
+                transition: transform 1s;
+            }
+
+            @keyframes fadeEnd {
+                from{
+                    opacity: 1;
+                    transform: translateY(0px);
+                }50%{
+                    opacity: 0;
+                    transform: translateY(-50px);
+                }to{
+                    opacity: 1;
+                    transform: translateY(0);
+                }
+            }
         }
 
         & .person_content_comment{
             width: 640px;
             margin-top: 40px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            text-align: center;
 
             & h3{
                 @include font('RalewayBold', 0, #000);
                 @include adaptiv-fon(18, 14);
                 margin-bottom: 25px;
+            }
+            & .titel_show{
+                animation: titelStart 1 ease 1s forwards;
+                transition: transform 0.4s;
+            }
+
+            @keyframes titelStart {
+                from{
+                    opacity: 0;
+                    transform: translateX(-200px);
+                }to{
+                    opacity: 1;
+                    transform: translateX(0px);
+                }
+            }
+
+            & .titel_hide{
+                animation: titelEnd 1 ease 1s forwards;
+                transition: transform 0.4s;
+            }
+            @keyframes titelEnd {
+                from{
+                    opacity: 1;
+                    transform: translateX(0px);
+                }to{
+                    opacity: 0;
+                    transform: translateX(200px);
+                }
             }
 
             & p{
@@ -91,6 +148,41 @@
                 @include font('Raleway', 0, #90a4ae);
                 @include adaptiv-fon(15, 14);
             }
+            & .description_show{
+                animation: descriptionStart 1 ease 1s forwards;
+                transition: transform 0.4s;
+            }
+
+            @keyframes descriptionStart {
+                from{
+                    opacity: 0;
+                    transform: translateX(200px);
+                }to{
+                    opacity: 1;
+                    transform: translateX(0px);
+                }
+            }
+
+            & .description_hide{
+                animation: descriptionEnd 1 ease 1s forwards;
+                transition: transform 0.4s;
+            }
+            @keyframes descriptionEnd {
+                from{
+                    opacity: 1;
+                    transform: translateX(0px);
+                }to{
+                    opacity: 0;
+                    transform: translateX(-200px);
+                }
+            }
+        }
+        & .person_show{
+            display: block;
+        }
+        
+        & .person_hide{
+            display: none;
         }
 
         & .person_content_socialNetwork{
