--- a/scss/7.Contact/contact.scss
+++ b/scss/7.Contact/contact.scss
@@ -96,3 +96,11 @@
         }
     }
 }
+
+@media (max-width:991px){
+    .contact{  
+        & .text{
+            width: 100%;
+        }
+    }
+}
