--- a/scss/5.aboutUs/about-us.scss
+++ b/scss/5.aboutUs/about-us.scss
@@ -86,7 +86,7 @@
 
     }
     & .sliderUpDown{
-        width: 760px;
+        width: 875px;
         height: 565px;
         & .sliderUpDown_block{
             width: 100%;
@@ -113,6 +113,7 @@
 
                 & .slider_menu{
                     position: absolute;
+                    width: 100%;
                     height: 100%;
                     display: flex;
                     flex-direction: column;
@@ -123,40 +124,47 @@
                     & .slider_item{
                         display: none;
 
-                        & .slider_avatar{
-                            margin-right: 50px;
-                            object-fit: contain;
-                        }
-
-                        & figcaption{
-                            width: 750px;
-                            height: 160px;
-                            background: #fff;
-                            border-radius: 10px;
-                            -webkit-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
-                            -moz-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
-                            box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
-
-                            & h3{
-                                @include font('RalewayBold', 0, #000);
-                                @include adaptiv-fon(18, 14);
-                                margin: 30px 0 0 30px;
+                        & figure{
+                            width: 100%;
+                            display: flex;
+                            justify-content: space-between;
+                            align-items: center;
+                            & .slider_avatar{
+                                object-fit: contain;
                             }
-
-                            & p{
-                                width: 650px;
-                                @include font('Raleway', 0, #b4c0c7);
-                                @include adaptiv-fon(14, 14);
-                                font-style: italic;
-                                margin: 15px 0 0 30px;
-                                line-height:25px
+    
+                            & figcaption{
+                                width: 750px;
+                                height: 160px;
+                                background: #fff;
+                                border-radius: 10px;
+                                -webkit-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
+                                -moz-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
+                                box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
+    
+                                & h3{
+                                    @include font('RalewayBold', 0, #000);
+                                    @include adaptiv-fon(18, 14);
+                                    margin: 30px 0 0 30px;
+                                }
+    
+                                & p{
+                                    width: 650px;
+                                    @include font('Raleway', 0, #b4c0c7);
+                                    @include adaptiv-fon(14, 14);
+                                    font-style: italic;
+                                    margin: 15px 0 0 30px;
+                                    line-height:25px
+                                }
                             }
                         }
                     }
                     & .slider_item.active{
                         display: flex;
+                        width: 100%;
                     }
                 }
+
                 & .animated_slide_up{
                     animation-name: slide_up;
                     animation-duration: 1s;
@@ -190,5 +198,100 @@
             }
         }
     }
-}   
+} 
+@media (max-width:1440px){
+    .darkened_background{
+        height: 850px;
+        & .testimonials{
+            flex-direction: column;
+            align-items: center;
+            & .titel_block{
+                margin: 40px 0 0 0;
+                & h2{
+                    width: 380px;
+                    margin:0 auto 25px auto;
+                }
+        
+                & p{
+                    text-align: center;
+                }
+        
+                & button{
+                    margin: 40px auto 0 auto;
+                }
+            }
+            & .sliderUpDown{
+                margin-top: 70px;
+                & .sliderUpDown_block{
+                    & .arrow_up{
+                        margin: 0;
+                    }
+        
+                    & .arrow_down{
+                        margin: 0;
+                    }
+                    & .conteiner{
+                        height: 400px;
+                    }
+                }
+            }
+        }
+    }
+}
 
+@media (max-width:991px){
+    .darkened_background{
+    & .testimonials{
+    & .sliderUpDown{
+        width: 100%;
+    & .sliderUpDown_block{
+    & .conteiner{
+    & .slider_menu{
+    & .slider_item{
+        & figure{
+            width: 90%;
+            height: 100%;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            background: #fff;
+            border-radius: 10px;
+            & .slider_avatar{
+                object-fit: contain;
+            }
+
+            & figcaption{
+                width: 80%;
+                height: 100%;
+                background: none;
+                border-radius: 0;
+                -webkit-box-shadow:none;
+                -moz-box-shadow: none;
+                box-shadow: none;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                & h3{
+                    margin: 0;
+                }
+
+                & p{
+                    width: 100%;
+                    margin: 0;
+                }
+                
+            }
+        }
+    }
+    & .slider_item.active{
+        height: 160px;
+        display: flex;
+        justify-content: center;
+    }
+    }
+    }
+    }
+    }
+    }
+    }
+}
