--- a/scss/1.header/header.scss
+++ b/scss/1.header/header.scss
@@ -135,7 +135,7 @@ header{
                 margin-left: 90px;
     
                 & h1{
-                    @include adaptiv-fon(57, 21);
+                    @include adaptiv-fon(57, 26);
                     @include font('RalewayExtraBold', false,  white); 
                     margin-top: 0;
                     margin-bottom: 20px;
@@ -232,8 +232,8 @@ header{
                     position: absolute;
                     left:-100%;
                     top: 0;
-                    width: 100%;
-                    height: 100%;
+                    width: 100vw;
+                    height: 100vh;
                     background: #ffffff;
 
                     & img{
@@ -259,6 +259,10 @@ header{
                                 text-decoration: underline;
                                 @include hover_button(black, pointer);
                             }
+                        }
+
+                        & .sing_up__item{
+                            display: none;
                         }
                     }
                 }
@@ -292,4 +296,142 @@ header{
 }
 .scroll{
     overflow-y: hidden;
+}
+
+
+@media (max-width:767px){
+    header{
+        & .nav{
+            justify-content: flex-start;
+            width: 100vw;
+            padding-bottom: 50px;
+            & img{
+                width: 180px;
+                margin-left: 6.4vw;
+            }
+            & .sing_up{
+                display: none;
+            }
+            & .hamburger-menu{
+                & .box {
+                    & .menu__box{
+                        & li:last-child{
+                            border: 1px solid transparent;
+                            border-image: linear-gradient(300deg, rgba(255,255,255,1) 0%, rgba(25,229,194,1) 0%, rgba(33,33,33,1) 0%, rgba(171,171,171,1) 0%, rgba(185,185,185,1) 0%, rgba(0,0,0,1) 0%, rgba(24,227,194,1) 0%, rgba(9,176,193,1) 100%) 10;
+                            -moz-border-image: -moz-linear-gradient(300deg, rgba(255,255,255,1) 0%, rgba(25,229,194,1) 0%, rgba(33,33,33,1) 0%, rgba(171,171,171,1) 0%, rgba(185,185,185,1) 0%, rgba(0,0,0,1) 0%, rgba(24,227,194,1) 0%, rgba(9,176,193,1) 100%) 10;
+                            -webkit-border-image: -webkit-linear-gradient(300deg, rgba(255,255,255,1) 0%, rgba(25,229,194,1) 0%, rgba(33,33,33,1) 0%, rgba(171,171,171,1) 0%, rgba(185,185,185,1) 0%, rgba(0,0,0,1) 0%, rgba(24,227,194,1) 0%, rgba(9,176,193,1) 100%) 10;
+                            border-image-slice: 1;
+                            & .sing_up__item{
+                                display: block;
+                                text-decoration:none;
+                                position: relative;
+                                @include font('Raleway', 1.0032rem, false); 
+                                background: linear-gradient(300deg, rgba(255,255,255,1) 0%, rgba(25,229,194,1) 0%, rgba(33,33,33,1) 0%, rgba(171,171,171,1) 0%, rgba(185,185,185,1) 0%, rgba(0,0,0,1) 0%, rgba(24,227,194,1) 0%, rgba(9,176,193,1) 100%);
+                                background-clip: text;
+                                -webkit-background-clip: text;
+                                -webkit-text-fill-color: transparent;
+                                font-weight: bold;
+                                padding: 2px 15px;
+                                border-radius: 3px;
+                                outline: 0;
+                                
+                            }
+
+                            & .btnAppear_active{
+                                animation: btnAppear 1s ease forwards;
+                            }
+            
+                            @keyframes btnAppear {
+                                from{
+                                    transform:translateX(0);
+                                    opacity: 1;
+                                }25%{
+                                    transform:translateX(100px);
+                                    opacity: 0;
+                                }50%{
+                                    transform:translateX(-100px);
+                                    opacity: 0;
+                                }to{
+                                    transform:translateX(0px);
+                                    opacity: 1;
+                                }
+                            }
+                        }                        
+                    }
+                }
+            }
+        }
+
+        & .header_section_laptop{    
+            & .headline{     
+                margin-left: 50px;   
+                & .hedline_text{
+                    width: 70vw;
+                    line-height: 1.5;
+                    margin-bottom: 25px;
+                }
+
+                & video{ 
+                    width: 80vw;
+                }
+
+                & .box_buttons{
+                    width: 80vw;
+                }
+            }
+        }
+    }
+}
+
+
+
+@media (max-width:575px){
+    header{
+        height: 550px;
+        & .nav{
+            justify-content: flex-start;
+            width: 100vw;
+            padding-bottom: 50px;
+            & img{
+                width: 180px;
+                margin-left: 6.4vw;
+            }
+            & .sing_up{
+                display: none;
+            }
+            & .hamburger-menu{
+                & .box {
+                    & img{
+                        margin-left: 15px;
+                        width: 180px;
+                    }
+                }
+            }
+        }
+
+        & .header_section_laptop{    
+            & .headline{     
+                margin-left: 25px;
+                & h1{
+                    margin-bottom: 10px;
+                }  
+                & .hedline_text{
+                    width: 80vw;
+                }
+
+                & video{ 
+                    display: none;
+                }
+
+                & .box_buttons{
+                    width: 80vw;
+                    height: 150px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+                    text-align: center;
+                }
+            }
+        }
+    }
 }
