--- a/scss/5.aboutUs/about-us.scss
+++ b/scss/5.aboutUs/about-us.scss
@@ -46,7 +46,7 @@
         & p{
             width: 515px;
             @include font('RalewaySemiBold', 0, #ffffff);
-            @include adaptiv-fon(14, 14);
+            @include adaptiv-fon(16, 14);
             line-height:25px
         }
 
@@ -141,17 +141,20 @@
                                 -webkit-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
                                 -moz-box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
                                 box-shadow: 0px 7px 8px 0px rgba(34, 60, 80, 0.2);
+                                & .mob_person{
+                                    display:none;
+                                }
     
-                                & h3{
+                                & .name_person{
                                     @include font('RalewayBold', 0, #000);
-                                    @include adaptiv-fon(18, 14);
+                                    @include adaptiv-fon(18, 16);
                                     margin: 30px 0 0 30px;
                                 }
     
                                 & p{
                                     width: 650px;
                                     @include font('Raleway', 0, #b4c0c7);
-                                    @include adaptiv-fon(14, 14);
+                                    @include adaptiv-fon(16, 14);
                                     font-style: italic;
                                     margin: 15px 0 0 30px;
                                     line-height:25px
@@ -271,7 +274,7 @@
                 display: flex;
                 justify-content: center;
                 flex-direction: column;
-                & h3{
+                & .name_person{
                     margin: 0;
                 }
 
@@ -293,5 +296,122 @@
     }
     }
     }
+    }
+}
+
+@media (max-width:767px){
+    .darkened_background{
+        height: 980px;
+        margin-bottom: 50px;
+        .testimonials{        
+            & .titel_block{
+                margin: 50px 0 0 0;
+                width: 100vw;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                & h2{
+                    width: 60vw;
+                    margin-bottom: 25px;
+                }
+        
+                & p{
+                    width: 90vw;
+                    line-height: 1.5;
+                    @include adaptiv-fon(16, 14);
+                }
+            }
+            & .sliderUpDown{
+                margin-top: 50px;
+                width: 100vw;
+                height: 550px;
+            & .sliderUpDown_block{
+            & .conteiner{
+                height: 500px;
+            & .slider_menu{
+            & .slider_item{
+                & figure{
+                    width: 90vw;
+                    & figcaption{
+                        width: 70vw;
+                        & .name_person{
+                            width: 70vw;
+                            margin: 10px 0;
+                        }
+        
+                        & p{
+                            width: 70vw;
+                            line-height: 1.5;
+                            @include adaptiv-fon(14, 12);
+                        }
+                        
+                    }
+                }
+            }
+            & .slider_item.active{
+                height: 200px;
+                display: flex;
+                justify-content: center;
+            }
+            }
+            }
+            }
+            }
+        }
+    }
+}
+
+
+@media (max-width:575px){
+    .darkened_background{
+        .testimonials{        
+            & .sliderUpDown{
+                margin-top: 50px;
+                width: 100vw;
+                height: 550px;
+            & .sliderUpDown_block{
+            & .conteiner{
+                height: 500px;
+            & .slider_menu{
+            & .slider_item{
+                & figure{
+                    width: 90vw;
+                    & .box__slider_avatar{display:none;}
+                    & figcaption{
+                        width: 85vw;
+                        & .name_person{display: none;}
+
+                        & .mob_person{
+                            width: 70vw;
+                            display: flex;
+                            align-items: center;
+
+                            & h3{
+                                font-size: 16px;
+                                width: 50vw;
+                                margin: 0;
+                            }
+
+                            & .slider_avatar{
+                                object-fit: contain;
+                                margin-right: 3vw;
+                            }
+                        } 
+                        & p{
+                            width: 85vw;
+                        }               
+                    }
+                }
+            }
+            & .slider_item.active{
+                height: 200px;
+                display: flex;
+                justify-content: center;
+            }
+            }
+            }
+            }
+            }
+        }
     }
 }
