--- a/scss/6.OurTeam/ourTeam.scss
+++ b/scss/6.OurTeam/ourTeam.scss
@@ -221,3 +221,201 @@
         }
     }
 }
+
+@media (max-width:767px){
+    .Our_Team{  
+        margin-bottom: 70px;
+        & .text{
+            @include adaptiv-fon(16, 14); 
+            line-height: 1.5;
+            width: 70vw;
+            margin: 20px auto 40px auto;
+        } 
+        & .person_content{
+            width: 100%;
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+    
+            & .person_content_image{
+                width: 100vw;
+                height: 470px;
+                display:flex;
+                flex-direction: column;
+                justify-content:space-evenly;
+                align-items: center; 
+                @keyframes fadeStart {
+                    from{
+                        opacity: 0;
+                        transform: translateX(-50px);
+                    }to{
+                        opacity: 1;
+                        transform: translateY(0);
+                    }
+                }
+                @keyframes fadeEnd {
+                    from{
+                        opacity: 1;
+                        transform: translateX(0px);
+                    }50%{
+                        opacity: 0;
+                        transform: translateX(-50px);
+                    }to{
+                        opacity: 1;
+                        transform: translateX(0);
+                    }
+                }
+            }
+    
+            & .person_content_comment{
+                width: 80vw;
+
+                @keyframes titelStart {
+                    from{
+                        opacity: 0;
+                        transform: translateX(-100px);
+                    }to{
+                        opacity: 1;
+                        transform: translateX(0px);
+                    }
+                }
+                @keyframes titelEnd {
+                    from{
+                        opacity: 1;
+                        transform: translateX(0px);
+                    }to{
+                        opacity: 0;
+                        transform: translateX(100px);
+                    }
+                }
+    
+                & p{
+                    @include adaptiv-fon(16, 14);
+                }
+    
+                @keyframes descriptionStart {
+                    from{
+                        opacity: 0;
+                        transform: translateX(50px);
+                    }to{
+                        opacity: 1;
+                        transform: translateX(0px);
+                    }
+                }
+    
+                & .description_hide{
+                    animation: descriptionEnd 1 ease 1s forwards;
+                    transition: transform 0.4s;
+                }
+                @keyframes descriptionEnd {
+                    from{
+                        opacity: 1;
+                        transform: translateX(0px);
+                    }to{
+                        opacity: 0;
+                        transform: translateX(-50px);
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width:575px){
+    .Our_Team{  
+        margin-bottom: 80px;
+        & .person_content{ 
+            & .person_content_image{
+                & .person_box_image{
+                    & .person_image{
+                        & img{
+                            width: 84px;
+                            height: 84px;
+                        }
+                    }
+                }
+                & .boxShadow{
+                    padding: 15px;
+                
+                    & .boxShadowInset{
+                        width: 120px;
+                        height: 120px;
+                        -webkit-box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 1) inset;
+                        -moz-box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 1) inset;
+                        box-shadow: 0px 0px 10px 4px rgba(0, 0, 0, 1) inset;
+    
+                        & .image_active{
+                            width: 120px;
+                            height: 120px;
+                        }
+                    }
+                }
+
+                @keyframes fadeStart {
+                    from{
+                        opacity: 0;
+                        transform: translateX(-50px);
+                    }to{
+                        opacity: 1;
+                        transform: translateY(0);
+                    }
+                }
+                @keyframes fadeEnd {
+                    from{
+                        opacity: 1;
+                        transform: translateX(0px);
+                    }50%{
+                        opacity: 0;
+                        transform: translateX(-50px);
+                    }to{
+                        opacity: 1;
+                        transform: translateX(0);
+                    }
+                }
+            }
+    
+            & .person_content_comment{
+                width: 80vw;
+                margin-top: 0;
+
+                @keyframes titelStart {
+                    from{
+                        opacity: 0;
+                        transform: translateX(-50px);
+                    }to{
+                        opacity: 1;
+                        transform: translateX(0px);
+                    }
+                }
+                @keyframes titelEnd {
+                    from{
+                        opacity: 1;
+                        transform: translateX(0px);
+                    }to{
+                        opacity: 0;
+                        transform: translateX(50px);
+                    }
+                }
+    
+                @keyframes descriptionStart {
+                    from{
+                        opacity: 0;
+                        transform: translateX(30px);
+                    }to{
+                        opacity: 1;
+                        transform: translateX(0px);
+                    }
+                }
+                @keyframes descriptionEnd {
+                    from{
+                        opacity: 1;
+                        transform: translateX(0px);
+                    }to{
+                        opacity: 0;
+                        transform: translateX(-30px);
+                    }
+                }
+            }
+        }
+    }
+}
