--- a/scss/7.Contact/contact.scss
+++ b/scss/7.Contact/contact.scss
@@ -104,3 +104,45 @@
         }
     }
 }
+
+@media (max-width:767px){
+    .contact{
+        margin-top: 50px;
+        margin-bottom: 50px;
+    
+        & .text{
+            width: 90vw;
+            line-height: 1.5;
+            margin: 30px auto;
+        }
+        & .contact_form{
+            & .form{
+                width: 100vw;
+                & .elements_form{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    & .input_form{
+                        justify-content: center;
+                        & input{
+                            @include input(90vw,  1px solid #061e37, 10px, 20px, 20px 0 20px 20px);
+                        }
+                    }
+    
+                    & textarea{
+                        @include input(90vw,  1px solid #061e37, 10px, 20px, 20px 0 120px 20px);
+                    }
+                }
+    
+                & .last__elements__input{
+                    width: 100vw;
+                    height: 100px;
+                    display: flex;
+                    @include flex-header(flex, space-around, center);
+                    flex-direction: column;
+                }
+            }
+        }
+    }
+}
+
