--- a/scss/footer/footer.scss
+++ b/scss/footer/footer.scss
@@ -58,3 +58,68 @@
         }
     }
 }
+
+
+@media (max-width:767px){
+    .footer{
+        width: 100vw;
+        @include flex-header(flex, space-evenly, center);
+        flex-direction: column;
+        & .footer_contact{
+            width: 320px;
+            margin: 0 0 0 25px;
+            @include flex-footer(flex, column, flex-start);
+
+            & .footer_contact_list{
+                margin-top: 20px;
+                @include flex-header(flex, space-between, 0);
+            }
+        }
+        & .footer_information{
+            width: 70vw;
+            margin: 0 25px 0 0;
+            @include flex-footer(flex, column, flex-end);
+        }
+    }
+    
+}
+
+
+@media (max-width:575px){
+    .footer{
+        height: 250px;
+        & .footer_contact{
+            width: 100vw;
+            margin: 0 0 0 0;
+            & .footer_logo{
+                & img{
+                    margin-left: 5vw;
+                }
+            }
+
+            & .footer_contact_list{
+                @include flex-header(flex, space-around, 0);
+            }
+        }
+        & .footer_information{
+            width: 100vw;
+            margin: 0 0 0 0;
+            @include flex-footer(flex, column, false);
+            align-items: center;
+            & .footer_information_list{
+                width: 100vw;
+                margin-bottom: 20px;
+                justify-content: space-around;
+            }
+            & .person_content_socialNetwork{
+                width: 50vw;
+                @include flex-header(flex, space-between, center);
+    
+                & img{
+                    margin-left: 0;
+                }
+            }
+        }
+    }
+    
+}
